--- a/client/index.html
+++ b/client/index.html
@@ -66,5 +66,6 @@
   <script src="/js/directives.js" type="text/javascript"></script>
   <script src="/js/filters.js" type="text/javascript"></script>
   <script src="/js/services.js" type="text/javascript"></script>
+  <script src="/js/authService.js" type="text/javascript"></script>
 </body>
 </html>
