login logout works and menu directories are working

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,18 @@
     </div>
     <!-- END LOGIN/ WELCOME PAGE -->
 
+    <!--ABOUT PAGE-->
+    <div>
+      <about></about>
+    </div>
+    <!--END ABOUT PAGE-->
+
+    <!--CONTACT PAGE-->
+    <div>
+      <contact></contact>
+    </div>
+    <!--END CONTACT PAGE-->
+
     <!-- SEARCH OPTIONS PAGE -->
     <div>
         <search-options></search-options>
