--- a/client/index.html
+++ b/client/index.html
@@ -67,15 +67,15 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
-  <script src="//code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type='text/javascript'></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="/js/scrap.js" type="text/javascript"></script>
-  <script src="/js/app.js" type="text/javascript"></script>
-  <script src="/js/controllers.js" type="text/javascript"></script>
-  <script src="/js/directives.js" type="text/javascript"></script>
-  <script src="/js/filters.js" type="text/javascript"></script>
-  <script src="/js/services.js" type="text/javascript"></script>
-  <script src="/js/authService.js" type="text/javascript"></script>
+  <script src="/js/scrap.js"></script>
+  <script src="/js/app.js"></script>
+  <script src="/js/controllers.js"></script>
+  <script src="/js/directives.js"></script>
+  <script src="/js/filters.js"></script>
+  <script src="/js/services.js"></script>
+  <script src="/js/authService.js"></script>
 </body>
 </html>
